--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "declaration": true,
     "outDir": "dist",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "sourceMap": true
   },
-  "include": ["./src/"]
+  "exclude": ["node_modules", "dist"]
 }
