--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "bin": {
     "branch-check": "dist/index.js"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "compile": "tsc",
     "branch-check": "ts-node src/index.ts",
